[gd_scene load_steps=3 format=1]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://game/ingame/pause_menu.gd" type="Script" id=2]

[node name="pause_menu" type="Control"]

process/pause_mode = 2
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="resume" type="Button" parent="."]

anchor/left = 3
anchor/right = 3
rect/min_size = Vector2( 200, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 150.0
margin/right = -100.0
margin/bottom = 250.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "RESUME"
flat = false

[node name="restart" type="Button" parent="."]

anchor/left = 3
anchor/right = 3
rect/min_size = Vector2( 200, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 270.0
margin/right = -100.0
margin/bottom = 370.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "RESTART"
flat = false

[node name="sounds" type="CheckBox" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 310.0
margin/top = 80.0
margin/right = 15.0
margin/bottom = 41.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "SOUNDS_ENABLED"
flat = false
align = 0

[node name="main_menu" type="Button" parent="."]

anchor/top = 1
anchor/bottom = 1
rect/min_size = Vector2( 200, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 540.0
margin/top = 120.0
margin/right = 740.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "MAIN_MENU"
flat = false

[connection signal="pressed" from="resume" to="." method="set_menu_visible" binds= [ false ]]

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]

[connection signal="toggled" from="sounds" to="." method="_on_sounds_toggled"]

[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]


